--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     build: .
     env_file:
       - .env
+    environment:
+      - MOCKIFY_PORT=${MOCKIFY_PORT}
+      - MOCKIFY_ROUTES=${MOCKIFY_ROUTES}
     volumes:
       - ./app:/app
     ports:
