--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     env_file:
       - .env
     environment:
-      - MOCKIFY_PORT=${MOCKIFY_PORT}
-      - MOCKIFY_ROUTES=${MOCKIFY_ROUTES}
+      - MOCKIFY_PORT=8001
+      - MOCKIFY_ROUTES=./config/routes.yaml
     volumes:
       - ./app:/app
     ports:
